# Fastly-object-storage-upload-example

./: Cargo.toml  README.md  fastly.toml
src/: config.rs  fos.rs  html.rs  main.rs
